feat: implement accordion

--- a/01-accordion.html
+++ b/01-accordion.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="accordion">
-      <section class="accordion-item">
+      <section class="accordion-item-open accordion-item">
         <div class="accordion-action">
           <button class="accordion-action-button">
             <span class="accordion-action-order">01</span>
@@ -93,7 +93,7 @@
           </ul>
         </div>
       </section>
-      <section class="open accordion-item">
+      <section class="accordion-item">
         <div class="accordion-action">
           <button class="accordion-action-button">
             <span class="accordion-action-order">03</span>
